--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -88,7 +88,7 @@
         <p class="col-lg-3">Đặt cọc</p>
         <div class="col-lg-7 form-group">
           <%= form.fields_for :payment do |section| %>
-            <%= section.number_field :deposit, class:"form-control"%>
+            <%= section.number_field :deposit, min: 0, class:"form-control"%>
         </div>
       </div>
     </div>
@@ -109,13 +109,13 @@
         <div class="col-lg-6 row">
           <p class="col-lg-7">Người lớn</p>
           <div class="col-lg-5 form-group">
-            <%= form.number_field :adults, class:"form-control" %>
+            <%= form.number_field :adults, in: 1 .. 20, class:"form-control" %>
           </div>
         </div>
         <div class="col-lg-6 row">
           <p class="col-lg-6">Trẻ em</p>
           <div class="col-lg-5 form-group">
-            <%= form.number_field :children, class:"form-control" %>
+            <%= form.number_field :children, in: 1 .. 20 ,class:"form-control" %>
           </div>
         </div>
       </div>
