--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -256,5 +256,8 @@
                 $('.modal close').click();
             }
         })
+        $('#quickResModal').on('hidden.bs.modal', function () {
+            $('#quickResModal').remove()
+        })
     }
 </script>
