Switing infomation among rooms successfully

--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -160,7 +160,9 @@
 
 <script type="text/javascript">
     $(document).ready(function(){
-
+        $('#quickResModal').on('hidden.bs.modal', function () {
+            $('#quickResModal').remove()
+        })
     })
 
 </script>
