--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,18 +4,18 @@
 </p>
 
 <p>
-  <strong>Arrivaldate:</strong>
-  <%= @reservation.arrivalDate %>
+  <strong>Arrival date:</strong>
+  <%= @reservation.arrival_date %>
 </p>
 
 <p>
-  <strong>Leavedate:</strong>
-  <%= @reservation.leaveDate %>
+  <strong>Leave date:</strong>
+  <%= @reservation.leave_date %>
 </p>
 
 <p>
-  <strong>Checkindate:</strong>
-  <%= @reservation.checkInDate %>
+  <strong>Check in date:</strong>
+  <%= @reservation.check_in_date %>
 </p>
 
 <p>
