--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @reservation  do |form| %>
+<%= form_with(model: @reservation)  do |form| %>
   <div class="row">
     <div class="col-lg-6 row">
       <div class="row end-row-md">
@@ -60,8 +60,7 @@
       <div class="row row">
         <p class="col-lg-3">Giá phòng</p>
         <div class="col-lg-7 form-group">
-          <%= form.label @room_price, class:"form-control", readonly:true %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+         <%= form.label RoomPrice.where(room_type_id: @room_type_id, price_type: 2).pluck(:price).to_s.tr('[]', ''), class:"form-control", readonly:true %>
         </div>
       </div>
     </div>
@@ -134,7 +133,7 @@
       <div class="row">
         <p class="col-lg-3">Tổng tiền</p>
         <div class="col-lg-7 form-group">
-          <%= form.number_field :deposit, min: 0, class:"form-control"%>
+          <%= form.number_field :total, min: 0, class:"form-control"%>
         </div>
       </div>
     </div>
@@ -149,9 +148,11 @@
 <!--    </div>-->
 <!--    <div class="col-lg-1"></div>-->
 <!--  </div>-->
-
   <div class="d-flex actions justify-content-end">
-    <%= form.submit "Save changes", class: "btn btn-primary" %>
+    <%= @reservation.inspect %>
+    <%#= form.submit "Save changes", class: "btn btn-primary add_reservation" %>
+    <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation) %>
+    <%= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation, arrival_date: @reservation.arrival_date, leave_date: @reservation.leave_date, client_name: @reservation.client_name, client_citizen_id: @reservation.client_citizen_id, children: @reservation.children, adults: @reservation.adults, client_id: @reservation.client_id, employee_id: @reservation.employee_id, room_id: @reservation.room_id, payment_id: @reservation.payment_id), method: :post	 %>
     <span style="width:10px"></span>
     <%= link_to 'Destroy', room_diagram_path, data: { dismiss: "modal", confirm:
                                                             'Are you sure?' }, :remote => true, :class => 'btn btn-secondary delete_reservation' %>
@@ -162,6 +163,10 @@
     $(document).ready(function(){
         $('#quickResModal').on('hidden.bs.modal', function () {
             $('#quickResModal').remove()
+        })
+        $('.add_reservation').click(function(event){
+            <%#= puts "HELLOOOOOOOOOOO" %>
+            <%#= puts @reservation.inspect %>
         })
     })
 
