--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,7 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block; }
 .bg-primary {
-    background-color: #6749b9 !important;
+    background-color: #000000 !important;
 }
 
 header
@@ -169,78 +169,6 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
 a:not([href]):not([tabindex]):focus {
     outline: 0; }
 
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: #866ec7;
-    color: #fff;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    position: relative; }
-#sidebar .h6 {
-    color: #fff; }
-#sidebar.active {
-    margin-left: -250px; }
-#sidebar.active .custom-menu {
-    margin-right: -50px; }
-#sidebar h1 {
-    margin-bottom: 20px;
-    font-weight: 700; }
-#sidebar h1 .logo {
-    color: #fff; }
-#sidebar ul.components {
-    padding: 0; }
-#sidebar ul li {
-    font-size: 16px; }
-#sidebar ul li > ul {
-    margin-left: 10px; }
-#sidebar ul li > ul li {
-    font-size: 14px; }
-#sidebar ul li a {
-    padding: 10px 0;
-    display: block;
-    color: rgba(255, 255, 255, 0.8);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-#sidebar ul li a:hover {
-    color: #fff; }
-#sidebar ul li.active > a {
-    background: transparent;
-    color: #fff; }
-@media (max-width: 991.98px) {
-    #sidebar {
-        margin-left: -250px; }
-    #sidebar.active {
-        margin-left: 0; }
-    #sidebar .custom-menu {
-        margin-right: -50px !important;
-        top: 10px !important; } }
-#sidebar .custom-menu {
-    display: inline-block;
-    position: absolute;
-    top: 20px;
-    right: 0;
-    margin-right: -20px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s; }
-@media (prefers-reduced-motion: reduce) {
-    #sidebar .custom-menu {
-        -webkit-transition: none;
-        -o-transition: none;
-        transition: none; } }
-#sidebar .custom-menu .btn {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%; }
-#sidebar .custom-menu .btn.btn-primary {
-    background: #6749b9;
-    border-color: #6749b9; }
-#sidebar .custom-menu .btn.btn-primary:hover, #sidebar .custom-menu .btn.btn-primary:focus {
-    background: #6749b9 !important;
-    border-color: #6749b9 !important; }
-
 a[data-toggle="collapse"] {
     position: relative; }
 
@@ -266,11 +194,11 @@ a[data-toggle="collapse"] {
     transition: all 0.3s; }
 
 .btn.btn-primary {
-    background: #866ec7;
-    border-color: #866ec7; }
+    background: #07153a;
+    border-color: #07153a; }
 .btn.btn-primary:hover, .btn.btn-primary:focus {
-    background: #866ec7 !important;
-    border-color: #866ec7 !important; }
+    background: #07153a !important;
+    border-color: #07153a !important; }
 
 button.close {
     padding: 0;
