--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,7 +12,7 @@
         <%= image_tag "Logo-White.png", width: "200px", height: "66px" %>
       <% end %>
     </li>
-    <li class="active">
+    <li id="home">
       <%= link_to root_path, data: { toggle: 'tooltip' } do %>
         <span class="fa fa-home"></span> Trang chủ
       <% end %>
@@ -23,22 +23,22 @@
 <!--      </a>-->
       <h6>Lễ Tân</h6>
       <ul class="list-unstyled" id="homeSubmenu">
-        <li>
+        <li id="room_diagram">
           <%= link_to room_diagram_path do %>
             <span class="fa fa-person-booth"></span> Sơ đồ phòng
           <% end %>
         </li>
-        <li>
+        <li id="services">
           <%= link_to services_path, data: { toggle: 'tooltip' }, aria: { expanded: false} do %>
             <span class="fa fa-concierge-bell"></span> Dịch vụ
           <% end %>
         </li>
-        <li>
+        <li id="individual">
           <%= link_to root_path do %>
             <span class="fa fa-briefcase"></span> Khách lẻ
           <% end %>
         </li>
-        <li>
+        <li id="cooperate">
           <%= link_to root_path do %>
             <span class="fa fa-users"></span> Khách đoàn
           <% end %>
@@ -49,32 +49,32 @@
     <li>
       <h6>Cấu hình</h6>
       <ul class="list-unstyled" id="pageSubmenu">
-        <li>
+        <li id="setting_rooms">
           <%= link_to rooms_path do %>
             <span class="fa fa-user"></span> Phòng
           <% end %>
         </li>
-        <li>
+        <li id="setting_room_types">
           <%= link_to room_types_path do %>
             <span class="fa fa-user"></span> Loại Phòng
           <% end %>
         </li>
-        <li>
+        <li id="setting_room_prices">
           <%= link_to room_prices_path do %>
             <span class="fa fa-money-bill-wave-alt"></span> Giá Phòng
           <% end %>
         </li>
-        <li>
+        <li id="setting_services">
           <%= link_to services_path do %>
             <span class="fa fa-utensils"></span> Dịch vụ
           <% end %>
         </li>
-        <li>
+        <li id="setting_employees">
           <%= link_to employees_path do %>
             <span class="fa fa-id-card-alt"></span> Nhân viên
           <% end %>
         </li>
-        <li>
+        <li id="setting_clients">
           <%= link_to clients_path do %>
             <span class="fa fa-user-secret"></span> Khách hàng
           <% end %>
@@ -87,14 +87,14 @@
       <h6>Thông tin cá nhân</h6>
       <% if user_signed_in? %>
         <ul class="list-unstyled" id="profileSubmenu">
-          <li>
+          <li id="profile">
             <%= link_to edit_user_registration_path, class:"dropdown-item" do %>
-              <i class="fa fa-edit "></i> Edit Profile
+              <i class="fa fa-edit "></i> Thông tin cá nhân
             <% end %>
           </li>
-          <li>
+          <li id="sign_out">
             <%= link_to destroy_user_session_path, method: :delete, class:"dropdown-item" do %>
-              <i class="fa fa-sign-out-alt "></i> Sign Out
+              <i class="fa fa-sign-out-alt "></i> Đăng xuất
             <% end %>
           </li>
         </ul>
@@ -102,11 +102,3 @@
     </li>
   </ul>
 </div>
-
-<script>
-  $('li').click(function () {
-      // $('#sidebar ul li').removeClass("active");
-      // $(this).addClass("active");
-      // console.log($(this))
-  })
-</script>
