--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -81,24 +81,7 @@
         </div>
       </div>
       <div class="col-sm-6 searchbar">
-        <div id="search" class="d-flex">
-          <div class="has-search">
-            <div class="dropdown">
-              <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Tầng
-              </button>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </div>
-            <div class="form-group">
-              <input  aria-label="Search" type="text" class="form-control" placeholder="Tìm kiếm...">
-              <span class="fa fa-search form-control-feedback"></span>
-            </div>
-          </div>
-        </div>
+        <%= render 'search' %>
       </div>
     </div>
   </nav>
