--- a/app/assets/stylesheets/searchbar.scss
+++ b/app/assets/stylesheets/searchbar.scss
@@ -68,22 +68,17 @@
     right: 10px;
   }
   .has-search .form-group input {
-    border-left: 0 solid #ced4da;
+    //border-left: 0 solid #ced4da;
     border-top-left-radius: unset;
     border-bottom-left-radius: unset;
   }
 }
 
-
-
 .has-search .dropdown {
   background-color: white;
 }
 
-
-
 .has-search .form-group .form-control-feedback {
-
   width: 2rem;
   line-height: 2.375rem;
   pointer-events: none;
