--- a/app/views/room_diagram/_search.html.erb
+++ b/app/views/room_diagram/_search.html.erb
@@ -2,18 +2,18 @@
 
 <div id="search" class="d-flex">
   <div class="has-search">
-    <div class="dropdown">
-      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Tầng
-      </button>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-      </div>
-    </div>
-    <%= form_with url: "/room_diagram", class:"form-group" do |form| %>
+<!--    <div class="dropdown">-->
+<!--      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--        Tên-->
+<!--      </button>-->
+<!--      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">-->
+<!--        <a class="dropdown-item" href="#">Tên</a>-->
+<!--        <a class="dropdown-item" href="#">Loại phòng</a>-->
+<!--      </div>-->
+<!--    </div>-->
+    <%= form_with url: "/room_diagram", class:"form-group d-flex" do |form| %>
       <%= form.text_field :name, class: "form-control", placeholder: "Tìm kiếm...", id: "search_name" %>
-      <%= form.submit "Search" %>
+      <%= form.submit "Search", class: "btn btn-primary" %>
 
   <% end %>
 <!--    <div class="form-group">-->
