--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -86,10 +86,7 @@
     </div>
   </nav>
   <div class="page-section d-flex justify-content-center">
-    <div id="switcher" class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary">Tầng</button>
-      <button type="button" class="btn inactive">Loại phòng</button>
-    </div>
+    <%= render 'filter' %>
   </div>
   <div class="page-section">
     <div class="filter-wrapper">
