Styling filter room statuses

--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -89,20 +89,7 @@
     <%= render 'filter' %>
   </div>
   <div class="page-section">
-    <div class="filter-wrapper">
-    <span class="filter-item">
-      Tất cả (6)
-    </span>
-      <span class="filter-item">
-      Tất cả (6)
-    </span>
-      <span class="filter-item">
-      Tất cả (6)
-    </span>
-      <span class="filter-item">
-      Tất cả (6)
-    </span>
-    </div>
+    <%= render 'room_status' %>
   </div>
     <% @filters.each do |f| %>
       <h3 class="row-title">
