--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -31,7 +31,7 @@ body {
   cursor: pointer;
 }
 
-.filter-wrapper .filter-item {
+.filter-wrapper a  {
   margin: 0 .5rem 0 .5rem;
 
   background-color: #436bd5;
@@ -40,7 +40,27 @@ body {
   padding: 10px 20px 10px 20px;
   max-width: 120px;
 }
-
+[id="status1"] {
+  background-color: red !important;
+}
+[id="status2"] {
+  background-color: red !important;
+}
+[id="status3"] {
+  background-color: red !important;
+}
+[id="status4"] {
+  background-color: red !important;
+}
+[id="status5"] {
+  background-color: red !important;
+}
+[id="status6"] {
+  background-color: red !important;
+}
+[id="status7"] {
+  background-color: red !important;
+}
 .room-wrapper {
   width: 250px;
   margin: 0 16px 20px 0;
