--- a/app/assets/stylesheets/searchbar.scss
+++ b/app/assets/stylesheets/searchbar.scss
@@ -7,6 +7,7 @@
   border: 1px solid  #ced4da;
   border-top-right-radius: unset;
   border-bottom-right-radius: unset;
+  height: 100%;
 }
 .has-search.dropdown .btn:active{
   box-shadow: #436bd5;
