--- a/app/views/room_diagram/_room_status.html.erb
+++ b/app/views/room_diagram/_room_status.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'room_status_filter' %>
 <div class="filter-wrapper">
   <%= link_to room_diagram_path(:room_status => "all"), id:"status1" do %>
     <span class="filter-item">
